# WebNLG2.0_Reader

./: .gitignore  pyproject.toml
data/webnlg/: test.jsonl  valid.jsonl
tests/: test_webnlg2_reader.py
webnlg2_reader/: __init__.py  reader.py  utils.py
webnlg2_reader/patterns/: constants.py  filter_dic_raw.py  fix_template_word.py  fix_tokenize.py  misc.py
