[tool.poetry]
name = "webnlg2_reader"
version = "0.1.0"
description = ""
authors = ["Diwank Singh Tomer <diwank.singh@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
spacy = "<3"
xmltodict = "^0.12.0"
six = "^1.16.0"
jsonlines = "^2.0.0"
tqdm = "^4.60.0"
ray = {extras = ["default"], version = "^1.3.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b1"
ipython = "^7.23.1"
pyupgrade = "^2.15.0"
modernize = "^0.8.0"
mypy = "^0.812"
pyannotate = "^1.2.0"
pytype = "^2021.5.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
